[LayoutNG] position:fixed has special ICB

There are two tests that test this, but they are currently failing
in Legacy too.
virtual/android/url-bar/bottom-and-top-fixed-sticks-to-top.html
virtual/android/url-bar/bottom-fixed-adjusted-when-showing-url-bar.html

I've confirment manually that position:fixed, bottom:0 Elements
stick to bottom on scrolling.

There is one remaining problem.
While scrolling is active, position:fixed, bottom:0 element does
not stick to the bottom of the viewport. It gets positioned correctly
after scrolling stops. Bug #906516

Bug: 870008
Change-Id: Ibe597141869794978865809caa3991cd4c2bd8a6
Reviewed-on: https://chromium-review.googlesource.com/c/1341127
Commit-Queue: Aleks Totic <atotic@chromium.org>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611045}
Former-commit-id: 68a755f9b2bdc9a682158c61445fb89ba4589c5f